# pi-remote

./: .gitignore  LICENSE  README.md  hid_keyboard_server.py  ir_tool.py  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
ansible/: README.md  inventory.example.ini  site.yml
ansible/group_vars/: all.yml
ansible/roles/broadlink_ir/tasks/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/go2rtc/handlers/: main.yml
ansible/roles/go2rtc/tasks/: main.yml
ansible/roles/go2rtc/templates/: go2rtc.service.j2  go2rtc.yaml.j2
ansible/roles/hid_server/handlers/: main.yml
ansible/roles/hid_server/tasks/: main.yml
ansible/roles/hid_server/templates/: config.env.j2  hid-keyboard-server.service.j2
ansible/roles/usb_gadget/handlers/: main.yml
ansible/roles/usb_gadget/tasks/: main.yml
ansible/roles/usb_gadget/templates/: usb-gadget.service.j2
config/: config.example.env
docs/: api-reference.md  api.md  configuration.md  home-assistant.md  homey.md  index.md  installation.md  ir.md  preview.md  remote-ui.md  requirements.txt  reverse-proxy.md  troubleshooting.md  usb-gadget.md
src/: hid_keyboard_server.py  ir_tool.py  remote.html  usb_gadget.sh
