[project]
name = "pi-remote"
version = "0.1.0"
description = "Raspberry Pi Zero USB-HID + IR remote bridge for an Android TV box, controllable over HTTP and from Home Assistant."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Drew Adlof" }]
keywords = ["raspberry-pi", "usb-gadget", "hid", "android-tv", "broadlink", "home-assistant", "remote"]
dependencies = []

[project.optional-dependencies]
# IR support (installed on the Pi via apt + --no-deps; see docs/ir.md)
ir = ["broadlink"]
# Documentation site
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]

[project.urls]
Homepage = "https://github.com/andrewadlof/pi-remote"
Documentation = "https://github.com/andrewadlof/pi-remote/tree/main/docs"
